# ChangeLog for net-libs/libzrtpcpp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libzrtpcpp/ChangeLog,v 1.24 2014/09/13 16:24:26 mgorny Exp $

*libzrtpcpp-4.4.0 (04 Jun 2015)

  04 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com>
  +libzrtpcpp-4.4.0.ebuild:
  net-libs/libzrtpcpp: version bump

*libzrtpcpp-4.2.4 (13 Sep 2014)

  13 Sep 2014; Michał Górny <mgorny@gentoo.org> +libzrtpcpp-4.2.4.ebuild:
  Minor version bump. Set subslot to match SONAME.

  27 Oct 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Voip herd is removed: http://article.gmane.org/gmane.linux.gentoo.devel/88434

  02 Sep 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -libzrtpcpp-0.9.0.ebuild, -libzrtpcpp-1.3.0.ebuild, -libzrtpcpp-1.4.1.ebuild,
  -libzrtpcpp-2.3.2.ebuild:
  Remove vulnerable versions, security bug #481228.

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> libzrtpcpp-2.3.4.ebuild:
  Stable for ppc, wrt bug #481228

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libzrtpcpp-2.3.4.ebuild:
  Stable for x86, wrt bug #481228

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libzrtpcpp-2.3.4.ebuild:
  Stable for amd64, wrt bug #481228

*libzrtpcpp-2.3.4 (16 Aug 2013)

  16 Aug 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libzrtpcpp-2.3.4.ebuild:
  Version bump, security bug #481228.

*libzrtpcpp-2.3.2 (13 Feb 2013)

  13 Feb 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libzrtpcpp-2.3.2.ebuild:
  Version bump, bug #300553.

  14 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  libzrtpcpp-0.9.0.ebuild, libzrtpcpp-1.3.0.ebuild, libzrtpcpp-1.4.1.ebuild:
  Depend on <net-libs/ccrtp-2, bug #438184.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libzrtpcpp-0.9.0.ebuild,
  libzrtpcpp-1.3.0.ebuild, libzrtpcpp-1.4.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml: