@@ -1,2 +1,2 @@
-DIST ZRTPCPP-4.2.4.tar.gz 1924579 SHA256 976e24d9e0520fcce77c58c2e1a247988296c517fa980c5abf548f7cd6f06c8d SHA512 cf8ee70891b29b86f252e28f70d546ed150c7c0adcd69f8b3b7b4a6d773f1a6aa7d800fded6dfecb224e1682ea21d3edc8a57a64563b4ac2b300e2dddd594b4a WHIRLPOOL e6f14617a51d3d231a0c60ca12501fbff8256d7d9548a4eca23769efa75ceb86e1da0f7b1b97eaea9584ec175c0d5f596a0c6e001b8cf6ad4372708bd30110e0
 DIST libzrtpcpp-4.4.0.tar.gz 1933153 SHA256 93bb3b8dc497407d57a948f588509accd5caa1632439050d1c7b5d90c4f93691 SHA512 6f3365706c81c631bc8b1b7001085a811ade87ab34bbd35bdbc83e62ba7992430e98ce5cba6eeb88cb806490b71141d8028dc9c8e03305df7f75d59ccc8084c1 WHIRLPOOL 12e45d27867324a3ccebfb169ae6b1e6b98f6a765196d4e4767aba29661b0fa548b904eb8d846cb57db297b756b92f26d9da0a8484aee9bcd4d0083dddc17a1e
+DIST libzrtpcpp-4.5.0.tar.gz 2231330 SHA256 c65bdfe1bd424384e42405c9c457a9bdb594ed20fbea786545994d91c77f9ed8 SHA512 73e8899e9dfd621922c2db1cde6bdeab26b9e3e357fb50ba4db02310ade992733f4550bde0634448d8634a25ed6280431ebeb110b7f4f7c74d9a058b8e847faf WHIRLPOOL 96d5894e8e9c0865514fadc1cde4dbc9cac9344e5776d858f2721cf9c17c8084136300e7d21ff84061c072b85bb9c9eb72b2de8156f994c1ef1eb1acc006de85
