@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <maintainer><email>maintainer-needed@gentoo.org</email></maintainer>
+<use>
+<flag name='sqlcipher'></flag>
+</use>
 </pkgmetadata>
